# RCATriageAnalyzer

./: .dockerignore  .env.example  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  tasks.py
backend/app/adapters/: alertmanager.py  cloudwatch.py  interfaces.py  llm.py  repo.py
backend/app/api/: routes.py
backend/app/config/: query_library.yaml  service_registry.yaml
backend/app/domain/: models.py
backend/app/services/: ingestion.py  normalization.py  notifier.py  query_library.py  security.py  service_registry.py  triage.py
backend/app/storage/: database.py  db_models.py  repositories.py
backend/app/utils/: hashing.py  redaction.py  time_windows.py
backend/eval/: __init__.py  offline_eval.py
backend/tests/: conftest.py  test_alertmanager_adapter.py  test_eval_harness.py  test_integration_fixture.py  test_llm_provider.py  test_normalization.py  test_redaction.py  test_report_schema.py  test_showcase_scenarios.py
docs/: backlog_status.md  reference_architecture.md
fixtures/: cloudwatch_alarm_event.json  cloudwatch_alarm_event_correlation.json  cloudwatch_alarm_event_recovery.json  cloudwatch_alarm_event_sustained.json  ground_truth_expected_report.json  logs_insights_result.json
infra/: docker-compose.yml
repos/checkout-api/: app.py
ui/: Dockerfile  index.html  package-lock.json  package.json
ui/src/: App.tsx  styles.css
worker/: Dockerfile  celery_worker.py
