[project]
name = "iats-backend"
version = "0.1.0"
description = "Incident Auto-Triage Service prototype backend"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "celery>=5.4.0",
  "redis>=5.0.7",
  "boto3>=1.34.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "python-dateutil>=2.9.0",
  "openai>=1.35.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
